# nacrypt

./: .clang-format  .gitignore  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  flake.nix  format.sh  main.c
.cargo/: config.toml
.github/workflows/: c-cpp.yml  rust.yml
include/: crypto.c  crypto.h  header.c  header.h  nacrypt_security.c  nacrypt_security.h  sandbox.c  sandbox.h  seccompfilter.c  seccompfilter.h  utils.c  utils.h  version.h
src/: crypto.rs  header.rs  lib.rs  main.rs  utils.rs
src/crypto/: asymmetric.rs  consts.rs  generic.rs  helpers.rs  symmetric.rs
